--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
     background-color: #d9dcd6;
 }
 
-/* header HTML semantic header content */
+/* Changed HTML semantic to header */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -21,12 +21,12 @@ header h1 {
     font-size: 48px;
 }
 
-/* Changed class selector to id selector */
+/* Changed 'seo' class selector  to id selector */
 header h1 #seo {
     color: #d9dcd6;
 }
 
-/* nav HTML semantic for links on the header */
+/* Changed HTML semantic to nav for links on the header */
 header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -47,7 +47,7 @@ p {
     font-size: 16px;
 }
 
-/* figure HTML semantic for background image */
+/* Changed HTML semantic to figure for background image */
 figure {
     height: 800px;
     width: 100%;
@@ -67,7 +67,7 @@ figure {
     margin-left: 25px;
 }
 
-/* article HTML semantic for content  */
+/* Changed HTML semantic to article for content */
 article {
     width: 75%;
     display: inline-block;
@@ -92,7 +92,7 @@ article div h2 {
     font-size: 36px;
 }
 
-/* aside HTML semantic for side content */
+/* Changed HTML semantic to aside for side content */
 aside {
     margin-right: 20px;
     padding: 20px;
@@ -120,7 +120,7 @@ aside div img {
     max-width: 150px;
 }
 
-/* footer HTML semantic for bottom div */
+/* Changed HTML semantic to footer */
 footer {
     padding: 30px;
     clear: both;
